test/files/neg/typemacros-incomplete-a.scala
trait Test {
  type Foo(x: Int);
  type Bar()
  type Baz() = Int
}